DuPont DevSB/src/objects/ccrz__E_CategoryMedia__c.object
<CustomObject>
    <description>Associated images for a Category</description>
    <fields>
        <fullName>ccrz__AltMessage__c</fullName>
        <description>Alternate text - this is the message to display if the image cannot be found or rendered by the browser</description>
        <label>AltMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CategoryMediaId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id for this entry - can be used for updates</description>
        <externalId>true</externalId>
        <label>Category Media Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <description>Reference to the category entry to which this media corresponds</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Category Media</relationshipLabel>
        <relationshipName>Category_Medias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this media record is active</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <description>The last date for which this media record is active. This is the last date the image will be displayed</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__FilePath__c</fullName>
        <description>Full file path for the image. If this is an attachment, then it would be the file name only. If it is a static resource, then the path within the resource</description>
        <label>File Path</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Locale corresponding to this entry. Different locales can have different category images</description>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MediaType__c</fullName>
        <description>Determines where this image is displayed. Values are &quot;Category Image&quot; and &quot;Category Image Thumbnail&quot;</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category Image</fullName>
                </value>
                <value>
                    <fullName>Category Image Thumbnail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductMediaSource__c</fullName>
        <description>Source of the image. Values are &quot;URL&quot;, &quot;Static Resource&quot; and &quot;Attachment&quot;</description>
        <label>Category Media Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>URI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <description>The start date for which this media record is active. This is the first date the image will be displayed</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__StaticResourceName__c</fullName>
        <description>Name of a static resource that contains this media.</description>
        <label>Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__URI__c</fullName>
        <description>If the source is a URL, contains the full URL to the image. This should reference a location with secure storage (SSL defined)</description>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Category Media</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Category Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Category Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>